fix: account for missing space when header and description are no longer visible on multistep.

--- a/src/DonationForms/resources/styles/design-settings/image.scss
+++ b/src/DonationForms/resources/styles/design-settings/image.scss
@@ -37,7 +37,6 @@
                 justify-content: center;
                 height: 204px;
                 width: 100%;
-                margin-bottom: 10rem;
                 --tint-color: rgba(0, 0, 0, 0.3); /* Note: Color needs to be converted to RGB values. */
                 --tint: linear-gradient(90deg, var(--tint-color), var(--tint-color));
                 background-color: rgb(30, 140, 190);
@@ -46,15 +45,29 @@
                 background-size: cover;
             }
 
-            .givewp-layouts {
-                &-headerTitle > h2, &-headerDescription p {
-                    position: relative;
-                    z-index: 999;
-                }
+
+            .givewp-layouts-headerImage {
+                height: 100px;
+                margin-top: 5rem;
             }
 
-            .givewp-layouts .givewp-layouts-goal {
-                margin-top: 5rem;
+            .givewp-layouts {
+                &-headerTitle, {
+                    position: absolute;
+                    top: var(--givewp-spacing-12);
+                    left: 0;
+                    width: 100%;
+                    z-index: 999;
+                }
+
+                &-headerDescription {
+                    position: absolute;
+                    top: 100px;
+                    left: 0;
+                    width: 100%;
+                    z-index: 999;
+                }
+
             }
         }
     }
